# cplusplus

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .release-please-manifest.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Config.cmake.in  Dockerfile.emsdk  Dockerfile.wasi  LICENSE  README.md  clangd_emscripten.in  package-lock.json  package.json  pyproject.toml  release-please-config.json
cplusplus/: AST.h  (+20 more)
src/frontend/: CMakeLists.txt  ast_printer.cc  ast_printer.h  cli.cc  cli.h  frontend.cc
src/frontend/cxx/: ast_printer.cc  ast_printer.h  check_expression_types.cc  check_expression_types.h  cli.cc  cli.h  cxx.cc  cxx_document.cc  cxx_document.h  dump_tokens.cc  dump_tokens.h  frontend.cc  frontend.h  lsp_server.cc  lsp_server.h  sync_queue.cc  sync_queue.h  verify_diagnostics_client.cc  verify_diagnostics_client.h
src/ir/: CMakeLists.txt
src/llvm/: CMakeLists.txt
src/lsp/: CMakeLists.txt
src/lsp/tests/: CMakeLists.txt  test_types.cc
src/mlir/: CMakeLists.txt
src/parser/: CMakeLists.txt
src/parser/cxx/: arena.h  ast.cc  ast.fbs  ast.h  ast_cloner.cc  ast_cloner.h  ast_cursor.cc  ast_cursor.h  ast_decoder.cc  ast_encoder.cc  ast_encoder.h  ast_fwd.h  ast_interpreter.cc  ast_interpreter.h  ast_interpreter_builtins.cc  ast_interpreter_declarations.cc  ast_interpreter_declarators.cc  ast_interpreter_expressions.cc  ast_interpreter_names.cc  ast_interpreter_specifiers.cc  ast_interpreter_statements.cc  ast_interpreter_units.cc  ast_kind.h  ast_pretty_printer.cc  ast_pretty_printer.h  ast_printer.cc  ast_printer.h  ast_rewriter.cc  ast_rewriter.h  ast_rewriter_declarations.cc  ast_rewriter_declarators.cc  ast_rewriter_expressions.cc  ast_rewriter_instantiate.cc  ast_rewriter_names.cc  ast_rewriter_packs.cc  ast_rewriter_partial_specialization.cc  ast_rewriter_pending_body.cc  ast_rewriter_requires.cc  ast_rewriter_specifiers.cc  ast_rewriter_statements.cc  (+129 more)
tests/api_tests/: CMakeLists.txt  test_control.cc  test_external_names.cc  test_rewriter.cc  test_substitution.cc  test_type_printer.cc  test_utils.h
tests/unit_tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  requirements.txt
tests/unit_tests/ast/: CMakeLists.txt  access_declaration_01.cc  array_to_pointer_conv_01.cc  asm_declaration_01.cc  binary_expression_01.cc  bitfield_declaration_01.cc  bool_literals_01.cc  boolean_conv_01.cc  class_definition_01.cc  complex_type_specifier_01.cc  consteval_if_01.cc  constrained_template_parameter_01.cc  ctor_initializer_01.cc  deduce_this_01.cc  deduction_guide_01.cc  deduction_guide_02.cc  designated_initializer_01.cc  enum_definition_01.cc  equal_initializer_01.cc  floating_integral_conv_01.cc  floating_point_conv_01.cc  floating_point_promotion_01.cc  for_range_statement_01.cc  for_range_statement_02.cc  function_definition_01.cc  function_to_pointer_conv_01.cc  generic_selection_01.c  if_statement_01.cc  integral_conversion_01.cc  integral_promotion_conv_01.cc  lambda_specifier_01.cc  namespace_definition_01.cc  nested_templates_01.cc  new_expression_01.cc  pack_expansion_01.cc  parameter_pack_01.cc  reflect_01.cc  reflect_02.cc  return_statement_01.cc  struct_alias_01.cc  (+10 more)
tests/unit_tests/codegen/: CMakeLists.txt  aggregate_copy_init_codegen_01.c  anon_union_struct_global_init_01.c  array2d_codegen_01.cc  array_to_ptr_extern_01.c  bitfield_compound_assign_01.c  builtin_alloca_codegen_01.cc  builtin_c23_va_start_01.c  builtin_constant_p_codegen_01.cc  builtin_huge_val_codegen_01.cc  builtin_nans_codegen_01.cc  builtin_operator_new_codegen_01.cc  builtin_source_location_01.cc  c_2d_char_array_init_01.c  c_extern_decl_definition_01.c  c_global_struct_array_addr_subscript_01.c  compound_lit_global_01.c  designated_array2d_global_codegen_01.c  designated_array2d_sema_01.c  designated_array_codegen_01.c  designated_array_global_codegen_01.c  global_ptr_init_array_decay_01.c  indirect_goto_01.c  nested_desig_anon_member_01.c  ref_binding_forwarding_codegen_01.cc  sizeof_array_deref_01.c  union_global_init_01.c  va_list_codegen_01.cc  vla_codegen_01.c  vla_codegen_02.c  vla_codegen_cxx_01.cc
tests/unit_tests/lsp/: CMakeLists.txt  code_completion_01.yml  document_01.yml  document_symbols.yml  lifecycle_01.yml
tests/unit_tests/parser/: CMakeLists.txt  c_stdlib.c  decltype.001.c  indirect_goto.c  indirect_goto.cc  is_same_as.001.cc  ns.001.cc  postfix_expr_conflicts.cc  sizeof.001.cc  struct.001.cc  templ.001.cc  type_traits.001.cc
tests/unit_tests/preprocessor/: CMakeLists.txt  bol_001.cc  counter.001.cc  cross_cursor_fn_macro.001.cc  cross_cursor_fn_macro.002.cc  define.001.cc  define.002.cc  define.003.cc  define.004.cc  elifdef_001.cc  file.001.cc  file.001.h  has_include_next.001.cc  header_guard_trailing.001.cc  include_next.001.cc  include_next.002.cc  iquote.001.cc  line.001.cc  line_markers.001.cc  line_markers_depfile.001.cc  line_markers_depfile.002.cc  line_markers_nested.h  line_markers_outer.h  merge_01.cc  redef_header.h  redef_undef.h  system_header.001.cc  va_args_001.cc  va_args_002.cc  va_args_003.cc  warning.001.cc
tests/unit_tests/sema/: CMakeLists.txt  address_op_01.cc  adl_01.cc  adl_auto_param_01.cc  adl_call_01.cc  adl_free_operator_01.cc  adl_member_operator_01.cc  adl_template_arg_namespace_01.cc  aggregate_copy_init_01.c  aligned_union_01.cc  aligned_union_02.cc  alignof_01.cc  anon_struct_layout_01.cc  anon_struct_layout_02.cc  assignment_void_pointer_c_01.c  assignment_void_pointer_cpp_01.cc  auto_template.cc  binary_invalid_bitwise_operands_01.cc  binary_invalid_logical_operands_01.cc  binder_duplicate_field_01.cc  binder_invalid_template_id_01.cc  binder_nested_name_wrong_01.cc  binder_typealias_conflict_01.cc  binder_typealias_symbol_conflict_01.cc  binder_unknown_base_class_01.cc  binder_using_unresolved_01.cc  bitfield_init_c_01.c  bitfields_01.cc  bitfields_layout_01.cc  bitfields_layout_02.cc  bitfields_layout_03.cc  bitint_01.cc  bitint_02.cc  bitint_negative_size_01.cc  bitint_sizeof_01.cc  bitint_template_param_01.cc  bitint_too_large_01.cc  bitint_too_small_01.cc  (+290 more)
tools/kwgen/: CMakeLists.txt  kwgen.cc
(+350 files in other folders)
